k8s_manifests/database-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    name: database
    environment: production
