k8s_manifests/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: database
  labels:
    app: database
spec:
  clusterIP: None
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: db-port
  selector:
    app: database
